[package]
name = "argot"
version = "0.2.2"
authors = ["Steven Hanna <steventhanna@gmail.com>"]
description = "Parse documentation from codebases into Markdown for easy doc creation."
license = "GPL-3.0-or-later"
documentation = "https://github.com/steventhanna/Argot/wiki"
homepage = "https://github.com/steventhanna/Argot"
repository = "https://github.com/steventhanna/Argot"

[dependencies]
simple-error = "0.1"
clap = "2.32.0"
walkdir = "2"
glob = "0.2"
indicatif = "=0.10.2"
human-panic = "1.0.1"
